codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__remote_image_rows.snap
---
source: tui/src/bottom_pane/chat_composer.rs
assertion_line: 4038
expression: terminal.backend()
---
"┌ WECODE ──────────────────────────────────────────────────────────────────────────────────────────┐"
"│ [Image #1]                                                                                       │"
"│ [Image #2]                                                                                       │"
"│                                                                                                  │"
"~ describe these                                                                                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                 100% context left  "
